[tool.poetry]
name = "hybrid-search"
version = "0.1.0"
description = ""
authors = ["Bui Thu Ha <thuhak22ba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
langchain = "^0.2.2"
rank-bm25 = "^0.2.2"
singlestoredb = "^1.3.1"
python-dotenv = "^1.0.1"
langchain-community = "^0.2.3"
sentence-transformers = "^3.0.0"
pypdf = "^4.2.0"
langchain-huggingface = "^0.0.2"
openai = "^1.32.0"
fastapi = "^0.111.0"
gradio = "^4.36.0"
cohere = "5.0.0"
dill = "^0.3.8"
unstructured = "^0.14.5"
pdfminer-six = "^20231228"
pillow-heif = "^0.16.0"
opencv-python-headless = "^4.10.0.82"
pdf2image = "^1.17.0"
unstructured-inference = "^0.7.34"
pytesseract = "^0.3.10"
unstructured-pytesseract = "^0.3.12"
ragas = "^0.1.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
